<resources>
    <string name="app_name">Hello Games</string>
    <string name="game_top_left_description">Image 1</string>
    <string name="game_top_right_description">Image 2</string>
    <string name="game_bottom_left_description">Image 3</string>
    <string name="game_bottom_right_description">Image 4</string>
    <string name="game_info_title">Game Info</string>
    <string name="game_info_image">Game Image</string>
    <string name="know_more_button">Do you want to know more?</string>

    <string name="game_data">
        <![CDATA[
        <b>Name: </b> %1$s<br/>
        <b>Type: </b> %2$s<br/>
        <b>Nb players: </b> %3$d<br/>
        <b>Year: </b> %4$d
        ]]>
    </string>
</resources>
