<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/game_top_left"
        android:contentDescription="@string/game_top_left_description"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/game_top_right"
        android:contentDescription="@string/game_top_right_description"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/game_bottom_left"
        android:contentDescription="@string/game_bottom_left_description"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/game_bottom_right"
        android:contentDescription="@string/game_bottom_right_description"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>